--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
+aiohttp==3.9.5
+aiosignal==1.3.1
 asgiref==3.7.2
+attrs==23.2.0
 Brotli==1.1.0
 certifi==2024.2.2
 cffi==1.16.0
@@ -7,6 +10,8 @@ click==8.1.7
 colorama==0.4.6
 cryptography==42.0.5
 defusedxml==0.7.1
+discord==2.3.2
+discord.py==2.3.2
 dj-database-url==2.1.0
 dj-rest-auth==5.1.0
 Django==4.2.11
@@ -14,10 +19,12 @@ django-allauth==0.61.1
 django-filter==24.1
 djangorestframework==3.15.1
 djangorestframework-simplejwt==5.3.1
+frozenlist==1.4.1
 gunicorn==21.2.0
 h11==0.14.0
 idna==3.6
 Markdown==3.6
+multidict==6.0.5
 oauthlib==3.2.2
 packaging==24.0
 pillow==10.2.0
@@ -33,3 +40,4 @@ tzdata==2023.4
 urllib3==2.2.1
 uvicorn==0.29.0
 whitenoise==6.6.0
+yarl==1.9.4
